# SuffixArray

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
aux/sais-lite-2.4.1/: Makefile  Makefile.am  Makefile.in
aux/sais-lite-2.4.1/.deps/: sais.Po
demo/: TheArtOfWar
src/apps/: Makefile.am  Makefile.in  SuffixArray.cpp
src/include/: SuffixArray.hpp
